--- a/sass/globals/_header.scss
+++ b/sass/globals/_header.scss
@@ -9,7 +9,7 @@ header#header {
       .navbar-brand {
         img {
           display: inline-block;
-          width: 8rem;
+          width: 10rem;
         }
       }
       .navbar-toggler {
@@ -59,6 +59,11 @@ header#header {
           .navbar-nav {
             align-items: center;
             padding-top: 0.33rem;
+            li {
+              a {
+                font-size: 1rem;
+              }
+            }
           }
         }
       }
